[REFACTOR] Used getFirst() instead of .get(0)